# hermes

./: Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
config/: config.yaml  settings.py
docs/: demo.md
docs/adr/: ADR-001-router-strategy.md  ADR-002-circuit-breaker.md  ADR-003-redis-over-kafka.md  ADR-004-sse-over-websocket.md  ADR-005-fastapi-over-go.md  README.md
docs/internal/: DEMO_REPORT.md  HERMES_TECHNICAL_REPORT.md
docs/internal/build-notes/: hermes-build-notes.md
gateway/: circuit_breaker.py  health.py  main.py  metrics.py  models.py  queue.py  rate_limiter.py  router.py  streaming.py
load_tests/: chaos.py  locustfile.py
scripts/: start_ollama.sh  verify_setup.sh
tests/: conftest.py  test_circuit_breaker.py  test_health.py  test_integration.py  test_queue.py  test_rate_limiter.py  test_router.py  test_streaming.py
ui/: index.html
